# ArcReel

./: .env.example  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
alembic/versions/: 3c8b0ae43345_fix_truncated_datetime_values.py  6cb95261c2b7_add_provider_currency_usage_tokens_.py
docs/: Google视频&图片生成费用参考.md  getting-started.md  火山方舟视频&图片生成费用参考.md
docs/claude-agent-sdk-docs/: download_docs.sh
docs/plans/: 2026-02-03-api-usage-tracking-design.md  2026-02-09-sdk-client-migration-design.md  2026-02-09-sdk-client-migration.md
docs/superpowers/plans/: 2026-03-16-video-service-layer.md  2026-04-13-session-actor.md
docs/superpowers/specs/: 2026-03-16-video-service-layer-design.md  2026-04-13-session-actor-design.md
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: api.test.ts  api.ts  index.css
frontend/src/components/copilot/: AgentCopilot.tsx
frontend/src/components/copilot/chat/: utils.test.ts  (+1 more)
frontend/src/components/layout/: GlobalHeader.tsx  UsageDrawer.tsx
frontend/src/components/pages/: ProjectsPage.test.tsx  ProjectsPage.tsx
frontend/src/components/ui/: ProviderIcon.tsx
frontend/src/hooks/: useAssistantSession.ts
frontend/src/pages/: LoginPage.tsx
frontend/src/react/components/: assistant-delete-session-dialog.js  assistant-session-dialog.js  create-project-modal.js
frontend/src/stores/: stores.test.ts  usage-store.ts
lib/: cost_calculator.py  gemini_client.py  media_generator.py  system_config.py  usage_tracker.py
lib/config/: registry.py
lib/db/models/: api_call.py
lib/db/repositories/: usage_repo.py
lib/image_backends/: ark.py
lib/text_backends/: ark.py  instructor_support.py
lib/video_backends/: __init__.py  ark.py  base.py  gemini.py  registry.py  seedance.py
scripts/: migrate_sqlite_to_orm.py
server/: app.py  auth.py
server/agent_runtime/: message_utils.py  service.py  session_actor.py  session_manager.py  stream_projector.py  turn_schema.py
server/routers/: assistant.py  auth.py  characters.py  clues.py  files.py  generate.py  project_events.py  projects.py  providers.py  system_config.py  tasks.py  usage.py  versions.py
server/services/: generation_tasks.py  reference_video_tasks.py
tests/: fakes.py  test_assistant_router_full.py  test_assistant_routes.py  test_assistant_service_more.py  test_assistant_service_streaming.py  test_auth.py  test_auth_middleware.py  test_auth_router.py  test_characters_router.py  test_clues_router.py  test_cost_calculator.py  test_files_router.py  test_generate_router.py  test_generation_tasks_service.py  test_imports.py  test_media_generator_module.py  test_project_events_router.py  test_projects_archive_routes.py  test_projects_router.py  test_providers_api.py  test_registry_consistency.py  test_session_actor.py  test_session_lifecycle.py  test_session_manager_more.py  test_session_manager_sdk_session_id.py  test_session_manager_user_input.py  test_system_config_router.py  test_tasks_router_more.py  test_tasks_sse.py  test_upload_restore_png.py  test_usage_repo.py  test_usage_router.py  test_usage_tracker.py  test_versions_router.py  test_video_backend_ark.py  test_video_backend_base.py  test_video_backend_gemini.py  test_video_backend_registry.py  test_video_backend_seedance.py
tests/server/: test_reference_video_tasks.py
tests/test_image_backends/: test_ark.py
