[project]
name = "arcreel"
# managed by release-please — do not bump manually
version = "0.11.0"
description = "AI video generation workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.59",
    "ffmpeg-python>=0.2.0",
    "fastapi>=0.135.1",
    "google-genai>=1.65.0",
    "Pillow>=12.1.1",
    "pydantic>=2.12.5",
    "PyYAML>=6.0.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "pyjwt>=2.12.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pwdlib[argon2]>=0.3.0",
    "volcengine-python-sdk[ark]>=5.0.17",
    "openai>=2.30.0",
    "xai-sdk>=1.8.2",
    "pyjianyingdraft>=0.2.6",
    "instructor>=1.14.5",
    "charset-normalizer>=3.4.6",
    "docx2txt>=0.9",
    "mammoth>=1.12.0",
    "ebooklib>=0.20",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "pymupdf>=1.27.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
    "python-docx>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: 快速、隔离、不触达真实 I/O 或外部服务的测试",
    "integration: 跨模块真实协作测试；禁止 mock 被测 module 的公共入口（否则是在测 mock 本身）",
    "e2e: 端到端、依赖真实外部资源（远程 API、大模型调用、重型 ffmpeg 等）的测试；CI 默认跳过",
]

[tool.coverage.run]
source = ["lib", "server"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    'if __name__ == "__main__":',
    "if __name__ == '__main__':",
]

[tool.ruff]
line-length = 120
exclude = [".worktrees", ".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E402", "E501"]
